fix #5458 ~ increase contrast of report a bug (#5459)

--- a/src/sass/components/header/headerNoAuth.scss
+++ b/src/sass/components/header/headerNoAuth.scss
@@ -54,7 +54,7 @@
     border-radius: $border-radius;
 }
 
-.headerNoAuth-item-report-button:hover { background: rgba(256,256,256, 0.1) }
+.headerNoAuth-item-report-button:hover { background: rgba(0,0,0,0.2) }
 
 .headerNoAuth-btn-back {
     flex: 1;
